<!--
 /* Copyright (C) 2013 Giannis Kitromilides 
 *
 * @version    : 1.0
 * @author     : Giannis Kitromilides (giannis.info) gkitromilides[at]gmail.com
 * @author     : Giannis Kitromilides                     gkitromilides[at]gmail.com
 *
 * Data Management Systems Laboratory (DMSL)
 * Department of Computer Science
 * University of Cyprus
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * at your option) any later version.
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * Υou should have received a copy of the GNU General Public License
 * along with this program. If not, see<http://www.gnu.org/licenses/> .
 *
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/BulkInsert" />

            <TextView
                android:id="@+id/bulkinserttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/Insert" />

            <TextView
                android:id="@+id/inserttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/View" />

            <TextView
                android:id="@+id/readtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/DropTable" />

            <TextView
                android:id="@+id/deletetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/find_table" />

            <TextView
                android:id="@+id/table_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/create_table" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_from_table" />

            <TextView
                android:id="@+id/deleterowfromtable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button8"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Test Insert" />

            <TextView
                android:id="@+id/testinsertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button9"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Multi Read" />

            <TextView
                android:id="@+id/multiwritetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="--ms"
                android:textSize="20dp" />
        </LinearLayout>
        
        
    </LinearLayout>

</ScrollView>